fixed missing space or closing tag errors and correct center ID to class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,14 +145,14 @@ header{
 
 }
 
-#center{
+.center{
     display: block;
     height: 20rem;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
 }
-#center-text{
+.center-text{
     display: block;
     height: 20vw;
     margin-left: auto;
@@ -262,7 +262,7 @@ header{
 
 /* Contact details */
 .contact-section{
-    height: 31vw;
+    height: 40vw;
     position: relative;
 }
 .contact-container-left{
@@ -327,8 +327,11 @@ form input[type=submit]:hover{
 
 /* Footer details */
 footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
     height: 8vw;
-    width: auto;
+    width: 100%;
     background-color: #7A4850;
     font-size: 1vw;
 
@@ -396,7 +399,7 @@ footer a{
         padding: 0;
         width: 10rem;
         height: 6rem;
-         background:url("../images/Pawesome_2.png") no-repeat left center;
+         background:url("../images/Pawesome_logo.png") no-repeat left center;
         background-size: contain;
     }
     .menu{
@@ -438,7 +441,7 @@ footer a{
         padding: 0;
         width: 10rem;
         height: 6rem;
-         background:url("../images/Pawesome_2.png") no-repeat left center;
+         background:url("../images/Pawesome_logo.png") no-repeat left center;
         background-size: contain;
     }
     .menu{
@@ -482,7 +485,7 @@ footer a{
         padding: 0;
         width: 4rem;
         height: 2rem;
-         background:url("../images/Pawesome_2.png") no-repeat left center;
+         background:url("../images/Pawesome_logo.png") no-repeat left center;
         background-size: contain;
     }
     .menu{
